# Chip-8-Emulator

./: .gitignore  CMakeLists.txt  README.md
src/: Chip8.cpp  Chip8.h  main.cpp
src/interface/: OpenGL.cpp  OpenGL.h
src/opcode/: opcode.cpp  opcode.h
src/setup/: setup.cpp  setup.h
src/utils/: input_utils.cpp  input_utils.h
